cmake_minimum_required(VERSION 3.3)
project(pintos)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/devices/block.c
    src/devices/block.h
    src/devices/ide.c
    src/devices/ide.h
    src/devices/input.c
    src/devices/input.h
    src/devices/intq.c
    src/devices/intq.h
    src/devices/kbd.c
    src/devices/kbd.h
    src/devices/partition.c
    src/devices/partition.h
    src/devices/pit.c
    src/devices/pit.h
    src/devices/rtc.c
    src/devices/rtc.h
    src/devices/serial.c
    src/devices/serial.h
    src/devices/shutdown.c
    src/devices/shutdown.h
    src/devices/speaker.c
    src/devices/speaker.h
    src/devices/timer.c
    src/devices/timer.h
    src/devices/vga.c
    src/devices/vga.h
    src/examples/bubsort.c
    src/examples/cat.c
    src/examples/cmp.c
    src/examples/cp.c
    src/examples/echo.c
    src/examples/halt.c
    src/examples/hex-dump.c
    src/examples/insult.c
    src/examples/lineup.c
    src/examples/ls.c
    src/examples/matmult.c
    src/examples/mcat.c
    src/examples/mcp.c
    src/examples/mkdir.c
    src/examples/pwd.c
    src/examples/recursor.c
    src/examples/rm.c
    src/examples/shell.c
    src/filesys/directory.c
    src/filesys/directory.h
    src/filesys/file.c
    src/filesys/file.h
    src/filesys/filesys.c
    src/filesys/filesys.h
    src/filesys/free-map.c
    src/filesys/free-map.h
    src/filesys/fsutil.c
    src/filesys/fsutil.h
    src/filesys/inode.c
    src/filesys/inode.h
    src/filesys/off_t.h
    src/lib/kernel/bitmap.c
    src/lib/kernel/bitmap.h
    src/lib/kernel/console.c
    src/lib/kernel/console.h
    src/lib/kernel/debug.c
    src/lib/kernel/hash.c
    src/lib/kernel/hash.h
    src/lib/kernel/list.c
    src/lib/kernel/list.h
    src/lib/kernel/stdio.h
    src/lib/user/console.c
    src/lib/user/debug.c
    src/lib/user/entry.c
    src/lib/user/stdio.h
    src/lib/user/syscall.c
    src/lib/user/syscall.h
    src/lib/arithmetic.c
    src/lib/ctype.h
    src/lib/debug.c
    src/lib/debug.h
    src/lib/inttypes.h
    src/lib/limits.h
    src/lib/packed.h
    src/lib/random.c
    src/lib/random.h
    src/lib/round.h
    src/lib/stdarg.h
    src/lib/stdbool.h
    src/lib/stddef.h
    src/lib/stdint.h
    src/lib/stdio.c
    src/lib/stdio.h
    src/lib/stdlib.c
    src/lib/stdlib.h
    src/lib/string.c
    src/lib/string.h
    src/lib/syscall-nr.h
    src/lib/ustar.c
    src/lib/ustar.h
    src/tests/filesys/base/child-syn-read.c
    src/tests/filesys/base/child-syn-wrt.c
    src/tests/filesys/base/lg-create.c
    src/tests/filesys/base/lg-full.c
    src/tests/filesys/base/lg-random.c
    src/tests/filesys/base/lg-seq-block.c
    src/tests/filesys/base/lg-seq-random.c
    src/tests/filesys/base/sm-create.c
    src/tests/filesys/base/sm-full.c
    src/tests/filesys/base/sm-random.c
    src/tests/filesys/base/sm-seq-block.c
    src/tests/filesys/base/sm-seq-random.c
    src/tests/filesys/base/syn-read.c
    src/tests/filesys/base/syn-read.h
    src/tests/filesys/base/syn-remove.c
    src/tests/filesys/base/syn-write.c
    src/tests/filesys/base/syn-write.h
    src/tests/filesys/extended/child-syn-rw.c
    src/tests/filesys/extended/dir-empty-name.c
    src/tests/filesys/extended/dir-mk-tree.c
    src/tests/filesys/extended/dir-mkdir.c
    src/tests/filesys/extended/dir-open.c
    src/tests/filesys/extended/dir-over-file.c
    src/tests/filesys/extended/dir-rm-cwd.c
    src/tests/filesys/extended/dir-rm-parent.c
    src/tests/filesys/extended/dir-rm-root.c
    src/tests/filesys/extended/dir-rm-tree.c
    src/tests/filesys/extended/dir-rmdir.c
    src/tests/filesys/extended/dir-under-file.c
    src/tests/filesys/extended/dir-vine.c
    src/tests/filesys/extended/grow-create.c
    src/tests/filesys/extended/grow-dir-lg.c
    src/tests/filesys/extended/grow-file-size.c
    src/tests/filesys/extended/grow-root-lg.c
    src/tests/filesys/extended/grow-root-sm.c
    src/tests/filesys/extended/grow-seq-lg.c
    src/tests/filesys/extended/grow-seq-sm.c
    src/tests/filesys/extended/grow-sparse.c
    src/tests/filesys/extended/grow-tell.c
    src/tests/filesys/extended/grow-two-files.c
    src/tests/filesys/extended/mk-tree.c
    src/tests/filesys/extended/mk-tree.h
    src/tests/filesys/extended/syn-rw.c
    src/tests/filesys/extended/syn-rw.h
    src/tests/filesys/extended/tar.c
    src/tests/filesys/seq-test.c
    src/tests/filesys/seq-test.h
    src/tests/internal/list.c
    src/tests/internal/stdio.c
    src/tests/internal/stdlib.c
    src/tests/threads/alarm-negative.c
    src/tests/threads/alarm-priority.c
    src/tests/threads/alarm-simultaneous.c
    src/tests/threads/alarm-wait.c
    src/tests/threads/alarm-zero.c
    src/tests/threads/mlfqs-block.c
    src/tests/threads/mlfqs-fair.c
    src/tests/threads/mlfqs-load-1.c
    src/tests/threads/mlfqs-load-60.c
    src/tests/threads/mlfqs-load-avg.c
    src/tests/threads/mlfqs-recent-1.c
    src/tests/threads/priority-change.c
    src/tests/threads/priority-condvar.c
    src/tests/threads/priority-donate-chain.c
    src/tests/threads/priority-donate-lower.c
    src/tests/threads/priority-donate-multiple.c
    src/tests/threads/priority-donate-multiple2.c
    src/tests/threads/priority-donate-nest.c
    src/tests/threads/priority-donate-one.c
    src/tests/threads/priority-donate-sema.c
    src/tests/threads/priority-fifo.c
    src/tests/threads/priority-preempt.c
    src/tests/threads/priority-sema.c
    src/tests/threads/tests.c
    src/tests/threads/tests.h
    src/tests/userprog/no-vm/multi-oom.c
    src/tests/userprog/args.c
    src/tests/userprog/bad-jump.c
    src/tests/userprog/bad-jump2.c
    src/tests/userprog/bad-read.c
    src/tests/userprog/bad-read2.c
    src/tests/userprog/bad-write.c
    src/tests/userprog/bad-write2.c
    src/tests/userprog/boundary.c
    src/tests/userprog/boundary.h
    src/tests/userprog/child-bad.c
    src/tests/userprog/child-close.c
    src/tests/userprog/child-rox.c
    src/tests/userprog/child-simple.c
    src/tests/userprog/close-bad-fd.c
    src/tests/userprog/close-normal.c
    src/tests/userprog/close-stdin.c
    src/tests/userprog/close-stdout.c
    src/tests/userprog/close-twice.c
    src/tests/userprog/create-bad-ptr.c
    src/tests/userprog/create-bound.c
    src/tests/userprog/create-empty.c
    src/tests/userprog/create-exists.c
    src/tests/userprog/create-long.c
    src/tests/userprog/create-normal.c
    src/tests/userprog/create-null.c
    src/tests/userprog/exec-arg.c
    src/tests/userprog/exec-bad-ptr.c
    src/tests/userprog/exec-missing.c
    src/tests/userprog/exec-multiple.c
    src/tests/userprog/exec-once.c
    src/tests/userprog/exit.c
    src/tests/userprog/halt.c
    src/tests/userprog/multi-child-fd.c
    src/tests/userprog/multi-recurse.c
    src/tests/userprog/open-bad-ptr.c
    src/tests/userprog/open-boundary.c
    src/tests/userprog/open-empty.c
    src/tests/userprog/open-missing.c
    src/tests/userprog/open-normal.c
    src/tests/userprog/open-null.c
    src/tests/userprog/open-twice.c
    src/tests/userprog/read-bad-fd.c
    src/tests/userprog/read-bad-ptr.c
    src/tests/userprog/read-boundary.c
    src/tests/userprog/read-normal.c
    src/tests/userprog/read-stdout.c
    src/tests/userprog/read-zero.c
    src/tests/userprog/rox-child.c
    src/tests/userprog/rox-multichild.c
    src/tests/userprog/rox-simple.c
    src/tests/userprog/sc-bad-arg.c
    src/tests/userprog/sc-bad-sp.c
    src/tests/userprog/sc-boundary-2.c
    src/tests/userprog/sc-boundary.c
    src/tests/userprog/wait-bad-pid.c
    src/tests/userprog/wait-killed.c
    src/tests/userprog/wait-simple.c
    src/tests/userprog/wait-twice.c
    src/tests/userprog/write-bad-fd.c
    src/tests/userprog/write-bad-ptr.c
    src/tests/userprog/write-boundary.c
    src/tests/userprog/write-normal.c
    src/tests/userprog/write-stdin.c
    src/tests/userprog/write-zero.c
    src/tests/vm/child-inherit.c
    src/tests/vm/child-linear.c
    src/tests/vm/child-mm-wrt.c
    src/tests/vm/child-qsort-mm.c
    src/tests/vm/child-qsort.c
    src/tests/vm/child-sort.c
    src/tests/vm/mmap-bad-fd.c
    src/tests/vm/mmap-clean.c
    src/tests/vm/mmap-close.c
    src/tests/vm/mmap-exit.c
    src/tests/vm/mmap-inherit.c
    src/tests/vm/mmap-misalign.c
    src/tests/vm/mmap-null.c
    src/tests/vm/mmap-over-code.c
    src/tests/vm/mmap-over-data.c
    src/tests/vm/mmap-over-stk.c
    src/tests/vm/mmap-overlap.c
    src/tests/vm/mmap-read.c
    src/tests/vm/mmap-remove.c
    src/tests/vm/mmap-shuffle.c
    src/tests/vm/mmap-twice.c
    src/tests/vm/mmap-unmap.c
    src/tests/vm/mmap-write.c
    src/tests/vm/mmap-zero.c
    src/tests/vm/page-linear.c
    src/tests/vm/page-merge-mm.c
    src/tests/vm/page-merge-par.c
    src/tests/vm/page-merge-seq.c
    src/tests/vm/page-merge-stk.c
    src/tests/vm/page-parallel.c
    src/tests/vm/page-shuffle.c
    src/tests/vm/parallel-merge.c
    src/tests/vm/parallel-merge.h
    src/tests/vm/pt-bad-addr.c
    src/tests/vm/pt-bad-read.c
    src/tests/vm/pt-big-stk-obj.c
    src/tests/vm/pt-grow-bad.c
    src/tests/vm/pt-grow-pusha.c
    src/tests/vm/pt-grow-stack.c
    src/tests/vm/pt-grow-stk-sc.c
    src/tests/vm/pt-write-code-2.c
    src/tests/vm/pt-write-code.c
    src/tests/vm/qsort.c
    src/tests/vm/qsort.h
    src/tests/arc4.c
    src/tests/arc4.h
    src/tests/cksum.c
    src/tests/cksum.h
    src/tests/lib.c
    src/tests/lib.h
    src/tests/main.c
    src/tests/main.h
    src/threads/flags.h
    src/threads/init.c
    src/threads/init.h
    src/threads/interrupt.c
    src/threads/interrupt.h
    src/threads/intr-stubs.h
    src/threads/io.h
    src/threads/loader.h
    src/threads/malloc.c
    src/threads/malloc.h
    src/threads/palloc.c
    src/threads/palloc.h
    src/threads/pte.h
    src/threads/switch.h
    src/threads/synch.c
    src/threads/synch.h
    src/threads/thread.c
    src/threads/thread.h
    src/threads/vaddr.h
    src/userprog/exception.c
    src/userprog/exception.h
    src/userprog/gdt.c
    src/userprog/gdt.h
    src/userprog/pagedir.c
    src/userprog/pagedir.h
    src/userprog/process.c
    src/userprog/process.h
    src/userprog/syscall.c
    src/userprog/syscall.h
    src/userprog/tss.c
    src/userprog/tss.h
    src/utils/setitimer-helper.c
    src/utils/squish-pty.c
    src/utils/squish-unix.c
    src/vm/build/devices/block.d
    src/vm/build/devices/block.o
    src/vm/build/devices/ide.d
    src/vm/build/devices/ide.o
    src/vm/build/devices/input.d
    src/vm/build/devices/input.o
    src/vm/build/devices/intq.d
    src/vm/build/devices/intq.o
    src/vm/build/devices/kbd.d
    src/vm/build/devices/kbd.o
    src/vm/build/devices/partition.d
    src/vm/build/devices/partition.o
    src/vm/build/devices/pit.d
    src/vm/build/devices/pit.o
    src/vm/build/devices/rtc.d
    src/vm/build/devices/rtc.o
    src/vm/build/devices/serial.d
    src/vm/build/devices/serial.o
    src/vm/build/devices/shutdown.d
    src/vm/build/devices/shutdown.o
    src/vm/build/devices/speaker.d
    src/vm/build/devices/speaker.o
    src/vm/build/devices/timer.d
    src/vm/build/devices/timer.o
    src/vm/build/devices/vga.d
    src/vm/build/devices/vga.o
    src/vm/build/filesys/directory.d
    src/vm/build/filesys/directory.o
    src/vm/build/filesys/file.d
    src/vm/build/filesys/file.o
    src/vm/build/filesys/filesys.d
    src/vm/build/filesys/filesys.o
    src/vm/build/filesys/free-map.d
    src/vm/build/filesys/free-map.o
    src/vm/build/filesys/fsutil.d
    src/vm/build/filesys/fsutil.o
    src/vm/build/filesys/inode.d
    src/vm/build/filesys/inode.o
    src/vm/build/lib/kernel/bitmap.d
    src/vm/build/lib/kernel/bitmap.o
    src/vm/build/lib/kernel/console.d
    src/vm/build/lib/kernel/console.o
    src/vm/build/lib/kernel/debug.d
    src/vm/build/lib/kernel/debug.o
    src/vm/build/lib/kernel/hash.d
    src/vm/build/lib/kernel/hash.o
    src/vm/build/lib/kernel/list.d
    src/vm/build/lib/kernel/list.o
    src/vm/build/lib/user/console.d
    src/vm/build/lib/user/console.o
    src/vm/build/lib/user/debug.d
    src/vm/build/lib/user/debug.o
    src/vm/build/lib/user/entry.d
    src/vm/build/lib/user/entry.o
    src/vm/build/lib/user/syscall.d
    src/vm/build/lib/user/syscall.o
    src/vm/build/lib/arithmetic.d
    src/vm/build/lib/arithmetic.o
    src/vm/build/lib/debug.d
    src/vm/build/lib/debug.o
    src/vm/build/lib/random.d
    src/vm/build/lib/random.o
    src/vm/build/lib/stdio.d
    src/vm/build/lib/stdio.o
    src/vm/build/lib/stdlib.d
    src/vm/build/lib/stdlib.o
    src/vm/build/lib/string.d
    src/vm/build/lib/string.o
    src/vm/build/lib/ustar.d
    src/vm/build/lib/ustar.o
    src/vm/build/tests/filesys/base/child-syn-read
    src/vm/build/tests/filesys/base/child-syn-read.d
    src/vm/build/tests/filesys/base/child-syn-read.o
    src/vm/build/tests/filesys/base/child-syn-wrt
    src/vm/build/tests/filesys/base/child-syn-wrt.d
    src/vm/build/tests/filesys/base/child-syn-wrt.o
    src/vm/build/tests/filesys/base/lg-create
    src/vm/build/tests/filesys/base/lg-create.d
    src/vm/build/tests/filesys/base/lg-create.o
    src/vm/build/tests/filesys/base/lg-full
    src/vm/build/tests/filesys/base/lg-full.d
    src/vm/build/tests/filesys/base/lg-full.o
    src/vm/build/tests/filesys/base/lg-random
    src/vm/build/tests/filesys/base/lg-random.d
    src/vm/build/tests/filesys/base/lg-random.o
    src/vm/build/tests/filesys/base/lg-seq-block
    src/vm/build/tests/filesys/base/lg-seq-block.d
    src/vm/build/tests/filesys/base/lg-seq-block.o
    src/vm/build/tests/filesys/base/lg-seq-random
    src/vm/build/tests/filesys/base/lg-seq-random.d
    src/vm/build/tests/filesys/base/lg-seq-random.o
    src/vm/build/tests/filesys/base/sm-create
    src/vm/build/tests/filesys/base/sm-create.d
    src/vm/build/tests/filesys/base/sm-create.o
    src/vm/build/tests/filesys/base/sm-full
    src/vm/build/tests/filesys/base/sm-full.d
    src/vm/build/tests/filesys/base/sm-full.o
    src/vm/build/tests/filesys/base/sm-random
    src/vm/build/tests/filesys/base/sm-random.d
    src/vm/build/tests/filesys/base/sm-random.o
    src/vm/build/tests/filesys/base/sm-seq-block
    src/vm/build/tests/filesys/base/sm-seq-block.d
    src/vm/build/tests/filesys/base/sm-seq-block.o
    src/vm/build/tests/filesys/base/sm-seq-random
    src/vm/build/tests/filesys/base/sm-seq-random.d
    src/vm/build/tests/filesys/base/sm-seq-random.o
    src/vm/build/tests/filesys/base/syn-read
    src/vm/build/tests/filesys/base/syn-read.d
    src/vm/build/tests/filesys/base/syn-read.o
    src/vm/build/tests/filesys/base/syn-remove
    src/vm/build/tests/filesys/base/syn-remove.d
    src/vm/build/tests/filesys/base/syn-remove.o
    src/vm/build/tests/filesys/base/syn-write
    src/vm/build/tests/filesys/base/syn-write.d
    src/vm/build/tests/filesys/base/syn-write.o
    src/vm/build/tests/filesys/seq-test.d
    src/vm/build/tests/filesys/seq-test.o
    src/vm/build/tests/userprog/args-dbl-space
    src/vm/build/tests/userprog/args-many
    src/vm/build/tests/userprog/args-multiple
    src/vm/build/tests/userprog/args-none
    src/vm/build/tests/userprog/args-single
    src/vm/build/tests/userprog/args.d
    src/vm/build/tests/userprog/args.o
    src/vm/build/tests/userprog/bad-jump
    src/vm/build/tests/userprog/bad-jump.d
    src/vm/build/tests/userprog/bad-jump.o
    src/vm/build/tests/userprog/bad-jump2
    src/vm/build/tests/userprog/bad-jump2.d
    src/vm/build/tests/userprog/bad-jump2.o
    src/vm/build/tests/userprog/bad-read
    src/vm/build/tests/userprog/bad-read.d
    src/vm/build/tests/userprog/bad-read.o
    src/vm/build/tests/userprog/bad-read2
    src/vm/build/tests/userprog/bad-read2.d
    src/vm/build/tests/userprog/bad-read2.o
    src/vm/build/tests/userprog/bad-write
    src/vm/build/tests/userprog/bad-write.d
    src/vm/build/tests/userprog/bad-write.o
    src/vm/build/tests/userprog/bad-write2
    src/vm/build/tests/userprog/bad-write2.d
    src/vm/build/tests/userprog/bad-write2.o
    src/vm/build/tests/userprog/boundary.d
    src/vm/build/tests/userprog/boundary.o
    src/vm/build/tests/userprog/child-args
    src/vm/build/tests/userprog/child-bad
    src/vm/build/tests/userprog/child-bad.d
    src/vm/build/tests/userprog/child-bad.o
    src/vm/build/tests/userprog/child-close
    src/vm/build/tests/userprog/child-close.d
    src/vm/build/tests/userprog/child-close.o
    src/vm/build/tests/userprog/child-rox
    src/vm/build/tests/userprog/child-rox.d
    src/vm/build/tests/userprog/child-rox.o
    src/vm/build/tests/userprog/child-simple
    src/vm/build/tests/userprog/child-simple.d
    src/vm/build/tests/userprog/child-simple.o
    src/vm/build/tests/userprog/close-bad-fd
    src/vm/build/tests/userprog/close-bad-fd.d
    src/vm/build/tests/userprog/close-bad-fd.o
    src/vm/build/tests/userprog/close-normal
    src/vm/build/tests/userprog/close-normal.d
    src/vm/build/tests/userprog/close-normal.o
    src/vm/build/tests/userprog/close-stdin
    src/vm/build/tests/userprog/close-stdin.d
    src/vm/build/tests/userprog/close-stdin.o
    src/vm/build/tests/userprog/close-stdout
    src/vm/build/tests/userprog/close-stdout.d
    src/vm/build/tests/userprog/close-stdout.o
    src/vm/build/tests/userprog/close-twice
    src/vm/build/tests/userprog/close-twice.d
    src/vm/build/tests/userprog/close-twice.o
    src/vm/build/tests/userprog/create-bad-ptr
    src/vm/build/tests/userprog/create-bad-ptr.d
    src/vm/build/tests/userprog/create-bad-ptr.o
    src/vm/build/tests/userprog/create-bound
    src/vm/build/tests/userprog/create-bound.d
    src/vm/build/tests/userprog/create-bound.o
    src/vm/build/tests/userprog/create-empty
    src/vm/build/tests/userprog/create-empty.d
    src/vm/build/tests/userprog/create-empty.o
    src/vm/build/tests/userprog/create-exists
    src/vm/build/tests/userprog/create-exists.d
    src/vm/build/tests/userprog/create-exists.o
    src/vm/build/tests/userprog/create-long
    src/vm/build/tests/userprog/create-long.d
    src/vm/build/tests/userprog/create-long.o
    src/vm/build/tests/userprog/create-normal
    src/vm/build/tests/userprog/create-normal.d
    src/vm/build/tests/userprog/create-normal.o
    src/vm/build/tests/userprog/create-null
    src/vm/build/tests/userprog/create-null.d
    src/vm/build/tests/userprog/create-null.o
    src/vm/build/tests/userprog/exec-arg
    src/vm/build/tests/userprog/exec-arg.d
    src/vm/build/tests/userprog/exec-arg.o
    src/vm/build/tests/userprog/exec-bad-ptr
    src/vm/build/tests/userprog/exec-bad-ptr.d
    src/vm/build/tests/userprog/exec-bad-ptr.o
    src/vm/build/tests/userprog/exec-missing
    src/vm/build/tests/userprog/exec-missing.d
    src/vm/build/tests/userprog/exec-missing.o
    src/vm/build/tests/userprog/exec-multiple
    src/vm/build/tests/userprog/exec-multiple.d
    src/vm/build/tests/userprog/exec-multiple.o
    src/vm/build/tests/userprog/exec-once
    src/vm/build/tests/userprog/exec-once.d
    src/vm/build/tests/userprog/exec-once.o
    src/vm/build/tests/userprog/exit
    src/vm/build/tests/userprog/exit.d
    src/vm/build/tests/userprog/exit.o
    src/vm/build/tests/userprog/halt
    src/vm/build/tests/userprog/halt.d
    src/vm/build/tests/userprog/halt.o
    src/vm/build/tests/userprog/multi-child-fd
    src/vm/build/tests/userprog/multi-child-fd.d
    src/vm/build/tests/userprog/multi-child-fd.o
    src/vm/build/tests/userprog/multi-recurse
    src/vm/build/tests/userprog/multi-recurse.d
    src/vm/build/tests/userprog/multi-recurse.o
    src/vm/build/tests/userprog/open-bad-ptr
    src/vm/build/tests/userprog/open-bad-ptr.d
    src/vm/build/tests/userprog/open-bad-ptr.o
    src/vm/build/tests/userprog/open-boundary
    src/vm/build/tests/userprog/open-boundary.d
    src/vm/build/tests/userprog/open-boundary.o
    src/vm/build/tests/userprog/open-empty
    src/vm/build/tests/userprog/open-empty.d
    src/vm/build/tests/userprog/open-empty.o
    src/vm/build/tests/userprog/open-missing
    src/vm/build/tests/userprog/open-missing.d
    src/vm/build/tests/userprog/open-missing.o
    src/vm/build/tests/userprog/open-normal
    src/vm/build/tests/userprog/open-normal.d
    src/vm/build/tests/userprog/open-normal.o
    src/vm/build/tests/userprog/open-null
    src/vm/build/tests/userprog/open-null.d
    src/vm/build/tests/userprog/open-null.o
    src/vm/build/tests/userprog/open-twice
    src/vm/build/tests/userprog/open-twice.d
    src/vm/build/tests/userprog/open-twice.o
    src/vm/build/tests/userprog/read-bad-fd
    src/vm/build/tests/userprog/read-bad-fd.d
    src/vm/build/tests/userprog/read-bad-fd.o
    src/vm/build/tests/userprog/read-bad-ptr
    src/vm/build/tests/userprog/read-bad-ptr.d
    src/vm/build/tests/userprog/read-bad-ptr.o
    src/vm/build/tests/userprog/read-boundary
    src/vm/build/tests/userprog/read-boundary.d
    src/vm/build/tests/userprog/read-boundary.o
    src/vm/build/tests/userprog/read-normal
    src/vm/build/tests/userprog/read-normal.d
    src/vm/build/tests/userprog/read-normal.o
    src/vm/build/tests/userprog/read-stdout
    src/vm/build/tests/userprog/read-stdout.d
    src/vm/build/tests/userprog/read-stdout.o
    src/vm/build/tests/userprog/read-zero
    src/vm/build/tests/userprog/read-zero.d
    src/vm/build/tests/userprog/read-zero.o
    src/vm/build/tests/userprog/rox-child
    src/vm/build/tests/userprog/rox-child.d
    src/vm/build/tests/userprog/rox-child.o
    src/vm/build/tests/userprog/rox-multichild
    src/vm/build/tests/userprog/rox-multichild.d
    src/vm/build/tests/userprog/rox-multichild.o
    src/vm/build/tests/userprog/rox-simple
    src/vm/build/tests/userprog/rox-simple.d
    src/vm/build/tests/userprog/rox-simple.o
    src/vm/build/tests/userprog/sc-bad-arg
    src/vm/build/tests/userprog/sc-bad-arg.d
    src/vm/build/tests/userprog/sc-bad-arg.o
    src/vm/build/tests/userprog/sc-bad-sp
    src/vm/build/tests/userprog/sc-bad-sp.d
    src/vm/build/tests/userprog/sc-bad-sp.o
    src/vm/build/tests/userprog/sc-boundary
    src/vm/build/tests/userprog/sc-boundary-2
    src/vm/build/tests/userprog/sc-boundary-2.d
    src/vm/build/tests/userprog/sc-boundary-2.o
    src/vm/build/tests/userprog/sc-boundary.d
    src/vm/build/tests/userprog/sc-boundary.o
    src/vm/build/tests/userprog/wait-bad-pid
    src/vm/build/tests/userprog/wait-bad-pid.d
    src/vm/build/tests/userprog/wait-bad-pid.o
    src/vm/build/tests/userprog/wait-killed
    src/vm/build/tests/userprog/wait-killed.d
    src/vm/build/tests/userprog/wait-killed.o
    src/vm/build/tests/userprog/wait-simple
    src/vm/build/tests/userprog/wait-simple.d
    src/vm/build/tests/userprog/wait-simple.o
    src/vm/build/tests/userprog/wait-twice
    src/vm/build/tests/userprog/wait-twice.d
    src/vm/build/tests/userprog/wait-twice.o
    src/vm/build/tests/userprog/write-bad-fd
    src/vm/build/tests/userprog/write-bad-fd.d
    src/vm/build/tests/userprog/write-bad-fd.o
    src/vm/build/tests/userprog/write-bad-ptr
    src/vm/build/tests/userprog/write-bad-ptr.d
    src/vm/build/tests/userprog/write-bad-ptr.o
    src/vm/build/tests/userprog/write-boundary
    src/vm/build/tests/userprog/write-boundary.d
    src/vm/build/tests/userprog/write-boundary.o
    src/vm/build/tests/userprog/write-normal
    src/vm/build/tests/userprog/write-normal.d
    src/vm/build/tests/userprog/write-normal.o
    src/vm/build/tests/userprog/write-stdin
    src/vm/build/tests/userprog/write-stdin.d
    src/vm/build/tests/userprog/write-stdin.o
    src/vm/build/tests/userprog/write-zero
    src/vm/build/tests/userprog/write-zero.d
    src/vm/build/tests/userprog/write-zero.o
    src/vm/build/tests/vm/child-inherit
    src/vm/build/tests/vm/child-inherit.d
    src/vm/build/tests/vm/child-inherit.o
    src/vm/build/tests/vm/child-linear
    src/vm/build/tests/vm/child-linear.d
    src/vm/build/tests/vm/child-linear.o
    src/vm/build/tests/vm/child-mm-wrt
    src/vm/build/tests/vm/child-mm-wrt.d
    src/vm/build/tests/vm/child-mm-wrt.o
    src/vm/build/tests/vm/child-qsort
    src/vm/build/tests/vm/child-qsort-mm
    src/vm/build/tests/vm/child-qsort-mm.d
    src/vm/build/tests/vm/child-qsort-mm.o
    src/vm/build/tests/vm/child-qsort.d
    src/vm/build/tests/vm/child-qsort.o
    src/vm/build/tests/vm/child-sort
    src/vm/build/tests/vm/child-sort.d
    src/vm/build/tests/vm/child-sort.o
    src/vm/build/tests/vm/mmap-bad-fd
    src/vm/build/tests/vm/mmap-bad-fd.d
    src/vm/build/tests/vm/mmap-bad-fd.o
    src/vm/build/tests/vm/mmap-clean
    src/vm/build/tests/vm/mmap-clean.d
    src/vm/build/tests/vm/mmap-clean.o
    src/vm/build/tests/vm/mmap-close
    src/vm/build/tests/vm/mmap-close.d
    src/vm/build/tests/vm/mmap-close.o
    src/vm/build/tests/vm/mmap-exit
    src/vm/build/tests/vm/mmap-exit.d
    src/vm/build/tests/vm/mmap-exit.o
    src/vm/build/tests/vm/mmap-inherit
    src/vm/build/tests/vm/mmap-inherit.d
    src/vm/build/tests/vm/mmap-inherit.o
    src/vm/build/tests/vm/mmap-misalign
    src/vm/build/tests/vm/mmap-misalign.d
    src/vm/build/tests/vm/mmap-misalign.o
    src/vm/build/tests/vm/mmap-null
    src/vm/build/tests/vm/mmap-null.d
    src/vm/build/tests/vm/mmap-null.o
    src/vm/build/tests/vm/mmap-over-code
    src/vm/build/tests/vm/mmap-over-code.d
    src/vm/build/tests/vm/mmap-over-code.o
    src/vm/build/tests/vm/mmap-over-data
    src/vm/build/tests/vm/mmap-over-data.d
    src/vm/build/tests/vm/mmap-over-data.o
    src/vm/build/tests/vm/mmap-over-stk
    src/vm/build/tests/vm/mmap-over-stk.d
    src/vm/build/tests/vm/mmap-over-stk.o
    src/vm/build/tests/vm/mmap-overlap
    src/vm/build/tests/vm/mmap-overlap.d
    src/vm/build/tests/vm/mmap-overlap.o
    src/vm/build/tests/vm/mmap-read
    src/vm/build/tests/vm/mmap-read.d
    src/vm/build/tests/vm/mmap-read.o
    src/vm/build/tests/vm/mmap-remove
    src/vm/build/tests/vm/mmap-remove.d
    src/vm/build/tests/vm/mmap-remove.o
    src/vm/build/tests/vm/mmap-shuffle
    src/vm/build/tests/vm/mmap-shuffle.d
    src/vm/build/tests/vm/mmap-shuffle.o
    src/vm/build/tests/vm/mmap-twice
    src/vm/build/tests/vm/mmap-twice.d
    src/vm/build/tests/vm/mmap-twice.o
    src/vm/build/tests/vm/mmap-unmap
    src/vm/build/tests/vm/mmap-unmap.d
    src/vm/build/tests/vm/mmap-unmap.o
    src/vm/build/tests/vm/mmap-write
    src/vm/build/tests/vm/mmap-write.d
    src/vm/build/tests/vm/mmap-write.o
    src/vm/build/tests/vm/mmap-zero
    src/vm/build/tests/vm/mmap-zero.d
    src/vm/build/tests/vm/mmap-zero.o
    src/vm/build/tests/vm/page-linear
    src/vm/build/tests/vm/page-linear.d
    src/vm/build/tests/vm/page-linear.o
    src/vm/build/tests/vm/page-merge-mm
    src/vm/build/tests/vm/page-merge-mm.d
    src/vm/build/tests/vm/page-merge-mm.o
    src/vm/build/tests/vm/page-merge-par
    src/vm/build/tests/vm/page-merge-par.d
    src/vm/build/tests/vm/page-merge-par.o
    src/vm/build/tests/vm/page-merge-seq
    src/vm/build/tests/vm/page-merge-seq.d
    src/vm/build/tests/vm/page-merge-seq.o
    src/vm/build/tests/vm/page-merge-stk
    src/vm/build/tests/vm/page-merge-stk.d
    src/vm/build/tests/vm/page-merge-stk.o
    src/vm/build/tests/vm/page-parallel
    src/vm/build/tests/vm/page-parallel.d
    src/vm/build/tests/vm/page-parallel.o
    src/vm/build/tests/vm/page-shuffle
    src/vm/build/tests/vm/page-shuffle.d
    src/vm/build/tests/vm/page-shuffle.o
    src/vm/build/tests/vm/parallel-merge.d
    src/vm/build/tests/vm/parallel-merge.o
    src/vm/build/tests/vm/pt-bad-addr
    src/vm/build/tests/vm/pt-bad-addr.d
    src/vm/build/tests/vm/pt-bad-addr.o
    src/vm/build/tests/vm/pt-bad-read
    src/vm/build/tests/vm/pt-bad-read.d
    src/vm/build/tests/vm/pt-bad-read.o
    src/vm/build/tests/vm/pt-big-stk-obj
    src/vm/build/tests/vm/pt-big-stk-obj.d
    src/vm/build/tests/vm/pt-big-stk-obj.o
    src/vm/build/tests/vm/pt-grow-bad
    src/vm/build/tests/vm/pt-grow-bad.d
    src/vm/build/tests/vm/pt-grow-bad.o
    src/vm/build/tests/vm/pt-grow-pusha
    src/vm/build/tests/vm/pt-grow-pusha.d
    src/vm/build/tests/vm/pt-grow-pusha.o
    src/vm/build/tests/vm/pt-grow-stack
    src/vm/build/tests/vm/pt-grow-stack.d
    src/vm/build/tests/vm/pt-grow-stack.o
    src/vm/build/tests/vm/pt-grow-stk-sc
    src/vm/build/tests/vm/pt-grow-stk-sc.d
    src/vm/build/tests/vm/pt-grow-stk-sc.o
    src/vm/build/tests/vm/pt-write-code
    src/vm/build/tests/vm/pt-write-code-2.d
    src/vm/build/tests/vm/pt-write-code-2.o
    src/vm/build/tests/vm/pt-write-code.d
    src/vm/build/tests/vm/pt-write-code.o
    src/vm/build/tests/vm/pt-write-code2
    src/vm/build/tests/vm/qsort.d
    src/vm/build/tests/vm/qsort.o
    src/vm/build/tests/arc4.d
    src/vm/build/tests/arc4.o
    src/vm/build/tests/cksum.d
    src/vm/build/tests/cksum.o
    src/vm/build/tests/lib.d
    src/vm/build/tests/lib.o
    src/vm/build/tests/main.d
    src/vm/build/tests/main.o
    src/vm/build/threads/init.d
    src/vm/build/threads/init.o
    src/vm/build/threads/interrupt.d
    src/vm/build/threads/interrupt.o
    src/vm/build/threads/intr-stubs.d
    src/vm/build/threads/intr-stubs.o
    src/vm/build/threads/kernel.lds.s
    src/vm/build/threads/loader.o
    src/vm/build/threads/malloc.d
    src/vm/build/threads/malloc.o
    src/vm/build/threads/palloc.d
    src/vm/build/threads/palloc.o
    src/vm/build/threads/start.d
    src/vm/build/threads/start.o
    src/vm/build/threads/switch.d
    src/vm/build/threads/switch.o
    src/vm/build/threads/synch.d
    src/vm/build/threads/synch.o
    src/vm/build/threads/thread.d
    src/vm/build/threads/thread.o
    src/vm/build/userprog/exception.d
    src/vm/build/userprog/exception.o
    src/vm/build/userprog/gdt.d
    src/vm/build/userprog/gdt.o
    src/vm/build/userprog/pagedir.d
    src/vm/build/userprog/pagedir.o
    src/vm/build/userprog/process.d
    src/vm/build/userprog/process.o
    src/vm/build/userprog/syscall.d
    src/vm/build/userprog/syscall.o
    src/vm/build/userprog/tss.d
    src/vm/build/userprog/tss.o
    src/vm/build/bochsrc.txt
    src/vm/build/kernel.bin
    src/vm/build/kernel.o
    src/vm/build/libc.a
    src/vm/build/loader.bin
    src/vm/build/Makefile
    src/vm/Make.vars
    src/vm/Makefile
    src/LICENSE
    src/Make.config
    src/Makefile
    src/Makefile.build
    src/Makefile.kernel
    src/Makefile.userprog
    alarm_tests)

add_executable(pintos ${SOURCE_FILES})